# TEProF2-Thesis

./: .gitignore  README.md  pyproject.toml
src/teprof3/annotation/: gene_annotator.py  te_query.py
src/teprof3/cli/: annotate.py  output.py
src/teprof3/postprocess/: aggregate.py
tests/: test_aggregate.py  test_annotate.py  test_annotate_cli.py  test_gene_annotator.py  test_te_annotator.py
